--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "html5-boilerplate": "^5.3.0",
     "bootstrap": "~3.3.0",
     "angular-messages": "~1.5.0",
-    "underscore": "~1.8.0"
+    "underscore": "~1.8.0",
+    "angular-cookies" : "~1.5.0"
   }
 }
