Ajout des controlleurs media et member et modification des model

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 app/bower_components/
 
 src/main/resources/META-INF/persistence.xml
+src/main/resources/application.properties
 
 .project
 /bin/
