Modification de rechercheMedia et ajout de rechercheMember

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ app/bower_components/
 
 src/main/resources/META-INF/persistence.xml
 
+src/main/resources/application.properties
+
 .project
 /bin/
 /target/
